[gd_scene load_steps=7 format=2]

[ext_resource path="res://Interface/Theme_Main.tres" type="Theme" id=1]
[ext_resource path="res://Interface/Game/DeathPanel.gd" type="Script" id=2]
[ext_resource path="res://Interface/Assets/ButtonSounds.gd" type="Script" id=3]
[ext_resource path="res://Interface/Assets/HopeGold.ttf" type="DynamicFontData" id=4]

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 6.0
bg_color = Color( 0.109804, 0.105882, 0.211765, 1 )
border_width_bottom = 2
border_color = Color( 0.054902, 0.0509804, 0.145098, 1 )
corner_detail = 1

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[node name="DeathPanel" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
script = ExtResource( 2 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 310.0
margin_bottom = 230.0
theme = ExtResource( 1 )

[node name="VBox" type="VBoxContainer" parent="PanelContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 305.0
margin_bottom = 224.0

[node name="Title" type="Label" parent="PanelContainer/VBox"]
unique_name_in_owner = true
margin_right = 300.0
margin_bottom = 14.0
text = "You died"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/VBox"]
margin_top = 18.0
margin_right = 300.0
margin_bottom = 191.0
rect_pivot_offset = Vector2( -171, 96 )
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="VBox" type="VBoxContainer" parent="PanelContainer/VBox/CenterContainer"]
margin_left = 105.0
margin_top = 68.0
margin_right = 195.0
margin_bottom = 104.0
rect_min_size = Vector2( 90, 0 )
alignment = 1

[node name="PlayAgain" type="Button" parent="PanelContainer/VBox/CenterContainer/VBox"]
margin_right = 90.0
margin_bottom = 16.0
text = "Play again"
script = ExtResource( 3 )

[node name="MainMenu" type="Button" parent="PanelContainer/VBox/CenterContainer/VBox"]
margin_top = 20.0
margin_right = 90.0
margin_bottom = 36.0
text = "Main menu"
script = ExtResource( 3 )

[node name="StatsPanel" type="PanelContainer" parent="PanelContainer/VBox"]
margin_top = 195.0
margin_right = 300.0
margin_bottom = 219.0
custom_styles/panel = SubResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBox/StatsPanel"]
margin_left = 5.0
margin_top = 5.0
margin_right = 295.0
margin_bottom = 18.0
alignment = 1

[node name="StatsCol2" type="Label" parent="PanelContainer/VBox/StatsPanel/HBoxContainer"]
unique_name_in_owner = true
margin_right = 143.0
margin_bottom = 13.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 1 )
text = "Column 1"
align = 1
valign = 1

[node name="StatsCol1" type="Label" parent="PanelContainer/VBox/StatsPanel/HBoxContainer"]
unique_name_in_owner = true
margin_left = 147.0
margin_right = 290.0
margin_bottom = 13.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 1 )
text = "Column 2"
align = 1
valign = 1

[node name="DeathTimer" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="PanelContainer/VBox/CenterContainer/VBox/PlayAgain" to="." method="_on_PlayAgain_pressed"]
[connection signal="pressed" from="PanelContainer/VBox/CenterContainer/VBox/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
